# CA2022-HW1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HW1.sln  LICENSE  README.md
HW1/: HW1.vcxproj  HW1.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters
assets/: cloth.frag  cloth.geom  cloth.vert  particle.frag  particle.vert  sphere.frag  sphere.vert
assets/simple/: particle.frag  sphere.frag  sphere.vert
cmake/cputest/: avx.cpp  avx2.cpp  avx512.cpp
code/example/include/: configs.h  gui.h  hw1.h  shape.h  sphere.h  utils.h
code/example/src/: CMakeLists.txt  buffer.cpp  cloth.cpp  configs.cpp  glcontext.cpp  integrator.cpp  sphere.cpp  vertexarray.cpp
include/: buffer.h  camera.h  cloth.h  configs.h  glcontext.h  gui.h  hw1.h  integrator.h  particles.h  scene.h  shader.h  shape.h  sphere.h  spring.h  utils.h  vertexarray.h
script/: homework.patch  pack.ps1  pack.sh  release.sh  unzip.py
src/: CMakeLists.txt  buffer.cpp  camera.cpp  cloth.cpp  configs.cpp  glcontext.cpp  gui.cpp  integrator.cpp  main.cpp  particles.cpp  shader.cpp  shape.cpp  sphere.cpp  utils.cpp
